[gd_scene load_steps=82 format=2]

[ext_resource path="res://scripts/enemy2.gd" type="Script" id=1]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKright/mageATTACKright (1).png" type="Texture" id=2]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKright/mageATTACKright (2).png" type="Texture" id=3]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKright/mageATTACKright (3).png" type="Texture" id=4]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKright/mageATTACKright (4).png" type="Texture" id=5]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKright/mageATTACKright (5).png" type="Texture" id=6]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKright/mageATTACKright (6).png" type="Texture" id=7]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKright/mageATTACKright (7).png" type="Texture" id=8]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKright/mageATTACKright (8).png" type="Texture" id=9]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKright/mageATTACKright (9).png" type="Texture" id=10]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKright/mageATTACKright (10).png" type="Texture" id=11]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKright/mageATTACKright (11).png" type="Texture" id=12]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKright/mageATTACKright (12).png" type="Texture" id=13]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKright/mageATTACKright (13).png" type="Texture" id=14]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKright/mageATTACKright (14).png" type="Texture" id=15]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKright/mageATTACKright (15).png" type="Texture" id=16]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKright/mageATTACKright (16).png" type="Texture" id=17]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKright/mageATTACKright (17).png" type="Texture" id=18]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKleft/mageATTACKleft (1).png" type="Texture" id=19]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKleft/mageATTACKleft (2).png" type="Texture" id=20]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKleft/mageATTACKleft (3).png" type="Texture" id=21]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKleft/mageATTACKleft (4).png" type="Texture" id=22]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKleft/mageATTACKleft (5).png" type="Texture" id=23]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKleft/mageATTACKleft (6).png" type="Texture" id=24]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKleft/mageATTACKleft (7).png" type="Texture" id=25]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKleft/mageATTACKleft (8).png" type="Texture" id=26]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKleft/mageATTACKleft (9).png" type="Texture" id=27]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKleft/mageATTACKleft (10).png" type="Texture" id=28]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKleft/mageATTACKleft (11).png" type="Texture" id=29]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKleft/mageATTACKleft (12).png" type="Texture" id=30]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKleft/mageATTACKleft (13).png" type="Texture" id=31]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKleft/mageATTACKleft (14).png" type="Texture" id=32]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKleft/mageATTACKleft (15).png" type="Texture" id=33]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKleft/mageATTACKleft (16).png" type="Texture" id=34]
[ext_resource path="res://textures/npc/MAGE-artassets/mageATTACKleft/mageATTACKleft (17).png" type="Texture" id=35]
[ext_resource path="res://textures/effects/bonusMAGICeffect/bonusMAGICeffect (4).png" type="Texture" id=36]
[ext_resource path="res://textures/effects/bonusMAGICeffect/bonusMAGICeffect (5).png" type="Texture" id=37]
[ext_resource path="res://textures/effects/bonusMAGICeffect/bonusMAGICeffect (6).png" type="Texture" id=38]
[ext_resource path="res://textures/effects/bonusMAGICeffect/bonusMAGICeffect (7).png" type="Texture" id=39]
[ext_resource path="res://textures/effects/bonusMAGICeffect/bonusMAGICeffect (8).png" type="Texture" id=40]
[ext_resource path="res://textures/effects/bonusMAGICeffect/bonusMAGICeffect (9).png" type="Texture" id=41]
[ext_resource path="res://textures/effects/bonusMAGICeffect/bonusMAGICeffect (10).png" type="Texture" id=42]
[ext_resource path="res://textures/npc/MAGE-artassets/mageIDLEleft/mageIDLEleft (1).png" type="Texture" id=43]
[ext_resource path="res://textures/npc/MAGE-artassets/mageIDLEleft/mageIDLEleft (2).png" type="Texture" id=44]
[ext_resource path="res://textures/npc/MAGE-artassets/mageIDLEleft/mageIDLEleft (3).png" type="Texture" id=45]
[ext_resource path="res://textures/npc/MAGE-artassets/mageIDLEleft/mageIDLEleft (4).png" type="Texture" id=46]
[ext_resource path="res://textures/npc/MAGE-artassets/mageIDLEleft/mageIDLEleft (5).png" type="Texture" id=47]
[ext_resource path="res://textures/npc/MAGE-artassets/mageIDLEleft/mageIDLEleft (6).png" type="Texture" id=48]
[ext_resource path="res://textures/npc/MAGE-artassets/mageIDLEleft/mageIDLEleft (7).png" type="Texture" id=49]
[ext_resource path="res://textures/npc/MAGE-artassets/mageIDLEleft/mageIDLEleft (8).png" type="Texture" id=50]
[ext_resource path="res://textures/npc/MAGE-artassets/mageIDLEleft/mageIDLEleft (9).png" type="Texture" id=51]
[ext_resource path="res://textures/npc/MAGE-artassets/mageIDLEleft/mageIDLEleft (10).png" type="Texture" id=52]
[ext_resource path="res://textures/npc/MAGE-artassets/mageWALKleft/mageWALKleft (1).png" type="Texture" id=53]
[ext_resource path="res://textures/npc/MAGE-artassets/mageWALKleft/mageWALKleft (2).png" type="Texture" id=54]
[ext_resource path="res://textures/npc/MAGE-artassets/mageWALKleft/mageWALKleft (3).png" type="Texture" id=55]
[ext_resource path="res://textures/npc/MAGE-artassets/mageWALKleft/mageWALKleft (4).png" type="Texture" id=56]
[ext_resource path="res://textures/npc/MAGE-artassets/mageWALKleft/mageWALKleft (5).png" type="Texture" id=57]
[ext_resource path="res://textures/npc/MAGE-artassets/mageWALKleft/mageWALKleft (6).png" type="Texture" id=58]
[ext_resource path="res://textures/npc/MAGE-artassets/mageWALKleft/mageWALKleft (7).png" type="Texture" id=59]
[ext_resource path="res://textures/npc/MAGE-artassets/mageWALKleft/mageWALKleft (8).png" type="Texture" id=60]
[ext_resource path="res://textures/npc/MAGE-artassets/mageIDLEright/mageIDLEright (1).png" type="Texture" id=61]
[ext_resource path="res://textures/npc/MAGE-artassets/mageIDLEright/mageIDLEright (2).png" type="Texture" id=62]
[ext_resource path="res://textures/npc/MAGE-artassets/mageIDLEright/mageIDLEright (3).png" type="Texture" id=63]
[ext_resource path="res://textures/npc/MAGE-artassets/mageIDLEright/mageIDLEright (4).png" type="Texture" id=64]
[ext_resource path="res://textures/npc/MAGE-artassets/mageIDLEright/mageIDLEright (5).png" type="Texture" id=65]
[ext_resource path="res://textures/npc/MAGE-artassets/mageIDLEright/mageIDLEright (6).png" type="Texture" id=66]
[ext_resource path="res://textures/npc/MAGE-artassets/mageIDLEright/mageIDLEright (7).png" type="Texture" id=67]
[ext_resource path="res://textures/npc/MAGE-artassets/mageIDLEright/mageIDLEright (8).png" type="Texture" id=68]
[ext_resource path="res://textures/npc/MAGE-artassets/mageIDLEright/mageIDLEright (9).png" type="Texture" id=69]
[ext_resource path="res://textures/npc/MAGE-artassets/mageIDLEright/mageIDLEright (10).png" type="Texture" id=70]
[ext_resource path="res://textures/npc/MAGE-artassets/mageWALKright/mageWALKright (1).png" type="Texture" id=71]
[ext_resource path="res://textures/npc/MAGE-artassets/mageWALKright/mageWALKright (2).png" type="Texture" id=72]
[ext_resource path="res://textures/npc/MAGE-artassets/mageWALKright/mageWALKright (3).png" type="Texture" id=73]
[ext_resource path="res://textures/npc/MAGE-artassets/mageWALKright/mageWALKright (4).png" type="Texture" id=74]
[ext_resource path="res://textures/npc/MAGE-artassets/mageWALKright/mageWALKright (5).png" type="Texture" id=75]
[ext_resource path="res://textures/npc/MAGE-artassets/mageWALKright/mageWALKright (6).png" type="Texture" id=76]
[ext_resource path="res://textures/npc/MAGE-artassets/mageWALKright/mageWALKright (7).png" type="Texture" id=77]
[ext_resource path="res://textures/npc/MAGE-artassets/mageWALKright/mageWALKright (8).png" type="Texture" id=78]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 36.0573
height = 51.4103

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "attackright",
"speed": 15.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ) ],
"loop": true,
"name": "attackleft",
"speed": 15.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ) ],
"loop": true,
"name": "die",
"speed": 15.0
}, {
"frames": [ ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ) ],
"loop": true,
"name": "idleleft",
"speed": 10.0
}, {
"frames": [ ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ) ],
"loop": true,
"name": "walkleft",
"speed": 10.0
}, {
"frames": [ ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ) ],
"loop": true,
"name": "idleright",
"speed": 10.0
}, {
"frames": [ ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ) ],
"loop": true,
"name": "walkright",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 174.419, 10 )

[node name="wizard" type="Node2D"]

scale = Vector2( 0.5, 0.5 )
_sections_unfolded = [ "Transform" ]

[node name="EnemyKB" type="KinematicBody2D" parent="." index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "collision" ]

[node name="bodycollision" type="CollisionShape2D" parent="EnemyKB" index="0"]

position = Vector2( 0, 23 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="EnemyKB" index="1"]

frames = SubResource( 2 )
animation = "idleleft"
frame = 3
offset = Vector2( -10, 0 )

[node name="viewright" type="Area2D" parent="EnemyKB" index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="viewcollision" type="CollisionShape2D" parent="EnemyKB/viewright" index="0"]

position = Vector2( 210, 0 )
shape = SubResource( 3 )

[node name="viewleft" type="Area2D" parent="EnemyKB" index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="viewcollision" type="CollisionShape2D" parent="EnemyKB/viewleft" index="0"]

position = Vector2( -210, 0 )
shape = SubResource( 3 )

[connection signal="animation_finished" from="EnemyKB/AnimatedSprite" to="EnemyKB" method="_on_Wizard_animation_finished"]

[connection signal="body_entered" from="EnemyKB/viewright" to="EnemyKB" method="_on_viewright_body_entered"]

[connection signal="body_entered" from="EnemyKB/viewleft" to="EnemyKB" method="_on_viewleft_body_entered"]


